<resources>
    <string name="app_name">GMAIL_APP_D.T.H</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_btn">LOGIN</string>
    <string name="app_logo">AppLogo</string>
    <string name="login_click_to_signup">Don\'t have an account? Sign Up now!</string>
    <string name="signup_create_an_account">Create an account</string>
    <string name="signup_birth_date_hint">Birth Date</string>
    <string name="signup_confirm_password_hint">Confirm Password</string>
    <string name="signup_first_name_hint">First Name</string>
    <string name="signup_last_name_hint">Last Name</string>
    <string name="signup_upload_profile_picture">Upload Profile Picture</string>
    <string name="signup_click_the_circle">Click the circle to upload a profile picture</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="sign_in_str">Sign In</string>
    <string-array name="gender_array">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="welcome_heading">Smart, secure,\nand simple email for everyone.</string>
    <string name="title_activity_main_inbox">MainInboxActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_starred">Starred</string>
    <string name="menu_draft">Draft</string>
    <string name="menu_sent">Sent</string>
    <string name="menu_spam">Spam</string>
    <string name="menu_received">Received</string>
    <string name="menu_trash">Trash</string>
    <string name="restore_from_trash">Restore from trash</string>
    <string name="restore_from_spam">Restore from spam</string>
    <string name="todo">TODO</string>
    <string name="move_to_label">Move to label</string>
    <string name="move_to_trash">Move to trash</string>
    <string name="mark_as_spam">Mark as spam</string>
    <string name="mark_as_unread">Mark as unread</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="exit_selection">Exit Selection</string>
    <string name="label_name">Label name</string>
    <string name="to_mail_dialog">To</string>
    <string name="subject_mail_dialog">Subject</string>
    <string name="content_mail_dialog">Content</string>
    <string name="username_profile_dialog">userName</string>
    <string name="full_name_profile_dialog">Full Name</string>
    <string name="gender_profile_dialog">Gender</string>
    <string name="birthdate_profile_dialog">Birthdate</string>
    <string name="complete">Complete</string>
    <string name="date">Date</string>
    <string name="star">Star</string>
    <string name="labels">Labels</string>
    <string name="search">Search</string>
    <string name="sign_out">Sign Out</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="user">User</string>
    <string name="edit_label">Edit Label</string>
</resources>