<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_menu_search_foreground"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />


    <item
        android:id="@+id/action_sign_out"
        android:icon="@drawable/ic_logout_foreground"
        android:title="@string/sign_out"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_toggle_dark_mode"
        android:icon="@drawable/ic_dark_mode_foreground"
        android:title="@string/dark_mode"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_user_info"
        android:icon="@drawable/ic_user_placeholder_foreground"
        android:title="@string/user"
        app:showAsAction="always" />
</menu>
