<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_receivers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/to_mail_dialog"
            android:inputType="textEmailAddress|textMultiLine"
            android:maxLines="3" />

        <EditText
            android:id="@+id/edit_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/subject_mail_dialog"
            android:inputType="textCapSentences" />

        <EditText
            android:id="@+id/edit_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/content_mail_dialog"
            android:inputType="textMultiLine"
            android:minLines="6"
            android:gravity="top"
            android:scrollbars="vertical" />

    </LinearLayout>
</ScrollView>
