<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".SignInActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SignInActivity"
    android:background="#F5F5F5">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="209dp"
        android:layout_height="153dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_form_background"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ExtraText">

        <TextView
            android:id="@+id/headerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_str"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="username"
            android:backgroundTint="#000000"
            android:hint="@string/login_username_hint"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:autofillHints="password"
            android:backgroundTint="#000000"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/blue"
            android:text="@string/login_btn"
            android:textColor="@color/black"
            android:layout_margin="2dp"/>

        <TextView
            android:id="@+id/signUpLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/login_click_to_signup"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>