<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainInboxActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.GMAIL_APP_DTH.AppBarOverlay">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:popupTheme="@style/Theme.GMAIL_APP_DTH.PopupOverlay" />


        <RelativeLayout
            android:id="@+id/bulk_action_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:visibility="gone"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:elevation="4dp">


            <FrameLayout
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/btn_exit_selection"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_arrow_back_foreground"
                    android:contentDescription="@string/exit_selection"
                    app:tint="@android:color/white"
                    />
            </FrameLayout>


            <LinearLayout
                android:id="@+id/bulk_actions_container"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <FrameLayout
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:id="@+id/btn_mark_read"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_read_foreground"
                        android:contentDescription="@string/mark_as_read"
                        app:tint="@android:color/white" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:layout_marginEnd="4dp"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:id="@+id/btn_mark_unread"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_unread_foreground"
                        android:contentDescription="@string/mark_as_unread"
                        app:tint="@android:color/white" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:layout_marginEnd="4dp"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:id="@+id/btn_spam"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_spam_foreground"
                        android:contentDescription="@string/mark_as_spam"
                        app:tint="@android:color/white" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:layout_marginEnd="4dp"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:id="@+id/btn_trash"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_delete_foreground"
                        android:contentDescription="@string/move_to_trash"
                        app:tint="@android:color/white" />
                </FrameLayout>
                <FrameLayout
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:layout_marginEnd="4dp"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:id="@+id/btn_move_to_label"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_labels_foreground"
                        android:contentDescription="@string/move_to_label"
                        app:tint="@android:color/white" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:layout_marginEnd="4dp"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:id="@+id/btn_untrash"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_remove_from_trash_foreground"
                        android:contentDescription="@string/restore_from_trash"
                        app:tint="@android:color/white" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:layout_marginEnd="4dp"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:id="@+id/btn_unspam"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_remove_from_spam_foreground"
                        android:contentDescription="@string/restore_from_spam"
                        app:tint="@android:color/white" />
                </FrameLayout>

            </LinearLayout>
        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <include layout="@layout/content_main_inbox" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_edit_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/edit_label"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_edit_foreground" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
